--- a/Techstore/FrontEnd/Style_css/Login_Registrasi/Dashboard.css
+++ b/Techstore/FrontEnd/Style_css/Login_Registrasi/Dashboard.css
@@ -248,6 +248,7 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border: 1px solid #ddd;
     position: relative;
+    transform: scale(1.1);
   }
 
   .flash-sale-product, .product-item {
