--- a/Techstore/FrontEnd/Style_css/Login_Registrasi/Dashboard.css
+++ b/Techstore/FrontEnd/Style_css/Login_Registrasi/Dashboard.css
@@ -248,7 +248,9 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border: 1px solid #ddd;
     position: relative;
-    transform: scale(1.1);
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease-in-out;
   }
 
   .flash-sale-product, .product-item {
